Fix tablet and mobile view -Add hover css on mobile and tablet view

--- a/tutangle-responsive/css/layout.css
+++ b/tutangle-responsive/css/layout.css
@@ -36,12 +36,6 @@
     height: 40px;
 }
 
-.footer {
-    background-color: #727272;
-    color: #d2d2d2;
-    height: 45px;
-}
-
 .body-section {
     margin-top: 28px;
     margin-bottom: 39px;
